tests/fail/ShiftRightUnsign.java
package pass;

public class ShiftRightUnsign {
	public static void main ( String [] args ) {
		System.out.println('a' >>> 42);
	}
}
